fix build + ycv

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -120,7 +120,7 @@
   "publicgoodsnetwork": true,
   "pulseChain": true,
   "rari": true,
-  "real": false,
+  "real": true,
   "reddioex": true,
   "reddiozkvm": true,
   "redstone": true,
@@ -149,6 +149,7 @@
   "synapse": true,
   "syndicateframe": true,
   "taiko": true,
+  "telos": true,
   "ten": true,
   "termstructure": true,
   "teva": true,
