OP Mainnet: fraud proofs + stage 1 (#4109)
Co-authored-by: Bartek Kiepuszewski <bkiepuszewski@gmail.com>
Co-authored-by: Mateusz Radomski <33978857+mateuszradomski@users.noreply.github.com>

--- a/packages/backend/discovery/optimism/optimism/config.jsonc
+++ b/packages/backend/discovery/optimism/optimism/config.jsonc
@@ -40,7 +40,7 @@
     },
     "GasPriceOracle": {
       "ignoreMethods": ["overhead", "scalar"],
-      "ignoreInWatchMode": ["l1BaseFee"]
+      "ignoreInWatchMode": ["l1BaseFee", "blobBaseFee"]
     },
     "OPToken": {
       "ignoreMethods": ["getPastTotalSupply"]
@@ -58,7 +58,8 @@
         "hash",
         "number",
         "timestamp",
-        "sequenceNumber"
+        "sequenceNumber",
+        "blobBaseFee"
       ]
     },
     "L2ToL1MessagePasser": {
