--- a/packages/backend/discovery/optimism/ethereum/config.jsonc
+++ b/packages/backend/discovery/optimism/ethereum/config.jsonc
@@ -37,7 +37,13 @@
     "0xc2819DC788505Aac350142A7A707BF9D03E3Bd03": "SecurityCouncilMultisig",
     "0x99C9fc46f92E8a1c0deC1b1747d010903E884bE1": "L1StandardBridge",
     "0x95703e0982140D16f8ebA6d158FccEde42f04a4C": "SuperchainConfig",
-    "0xa3d596EAfaB6B13Ab18D40FaE1A962700C84ADEa": "FeesCollector"
+    "0xa3d596EAfaB6B13Ab18D40FaE1A962700C84ADEa": "FeesCollector",
+    "0xe5965Ab5962eDc7477C8520243A95517CD252fA9": "DisputeGameFactory",
+    "0x4146DF64D83acB0DcB0c1a4884a16f090165e122": "FaultDisputeGame",
+    "0xD326E10B8186e90F4E2adc5c13a2d0C137ee8b34": "PreimageOracle",
+    "0xE9daD167EF4DE8812C1abD013Ac9570C616599A0": "PermissionedDisputeGame",
+    "0x09f7150D8c019BeF34450d6920f6B3608ceFdAf2": "GuardianMultisig",
+    "0x0454092516c9A4d636d3CAfA1e82161376C8a748": "LivenessModule"
   },
   "overrides": {
     "AddressManager": {
@@ -317,6 +323,50 @@
     },
     "FeesCollector": {
       "ignoreInWatchMode": ["getNextSequenceId"]
+    },
+    "DisputeGameFactory": {
+      "ignoreMethods": ["gameAtIndex"],
+      "fields": {
+        "gameImpls": {
+          "handler": {
+            "type": "array",
+            "length": 5
+          }
+        },
+        "initBonds": {
+          "handler": {
+            "type": "array",
+            "length": 5
+          }
+        }
+      }
+    },
+    "FaultDisputeGame": {
+      "ignoreMethods": [
+        "getNumToResolve",
+        "resolutionCheckpoints",
+        "resolvedSubgames"
+      ]
+    },
+    "PreimageOracle": {
+      "ignoreMethods": ["zeroHashes"]
+    },
+    "PermissionedDisputeGame": {
+      "ignoreMethods": [
+        "getNumToResolve",
+        "resolutionCheckpoints",
+        "resolvedSubgames"
+      ]
+    },
+    "LivenessModule": {
+      "fields": {
+        "getRequiredThreshold": {
+          "handler": {
+            "type": "array",
+            "length": 20
+          }
+        }
+      }
     }
   }
 }
