--- a/vercel.json
+++ b/vercel.json
@@ -85,7 +85,7 @@
     {
       "source": "/api/projects/:project/tvl/assets/:asset",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/projects/:project/tvl/assets/:asset"
+      "destination": "https://api-staging.eltwobeat.com/api/projects/:project/tvl/assets/:asset"
     },
     {
       "source": "/api/projects/:project/tvl/assets/:asset",
@@ -94,7 +94,7 @@
     {
       "source": "/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
+      "destination": "https://api-staging.eltwobeat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
     },
     {
       "source": "/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type",
@@ -103,7 +103,7 @@
     {
       "source": "/api/tvl2/token",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/tvl2/token"
+      "destination": "https://api-staging.eltwobeat.com/api/tvl2/token"
     },
     {
       "source": "/api/tvl2/token",
@@ -112,7 +112,7 @@
     {
       "source": "/api/tvl2/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/tvl2/aggregate"
+      "destination": "https://api-staging.eltwobeat.com/api/tvl2/aggregate"
     },
     {
       "source": "/api/tvl2/aggregate",
@@ -121,7 +121,7 @@
     {
       "source": "/api/tvl/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/tvl/aggregate"
+      "destination": "https://api-staging.eltwobeat.com/api/tvl/aggregate"
     },
     {
       "source": "/api/tvl/aggregate",
@@ -130,7 +130,7 @@
     {
       "source": "/api/activity/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
-      "destination": "https://staging.l2beat.com/api/activity/aggregate"
+      "destination": "https://api-staging.eltwobeat.com/api/activity/aggregate"
     },
     {
       "source": "/api/activity/aggregate",
