--- a/packages/backend/discovery/lightlink/ethereum/config.jsonc
+++ b/packages/backend/discovery/lightlink/ethereum/config.jsonc
@@ -64,6 +64,7 @@
         "chain", // too many values
         "getHeaderByNum" // too many values
       ],
+      "ignoreInWatchMode": ["chainHead", "getHead"],
       "fields": {
         "proxiableUUID": {
           "handler": {
