--- a/packages/backend/discovery/polygon-plasma/ethereum/config.jsonc
+++ b/packages/backend/discovery/polygon-plasma/ethereum/config.jsonc
@@ -35,6 +35,9 @@
     "0xa45b966996374E9e65ab991C6FE4Bfce3a56DDe8": "MaticWETH"
   },
   "overrides": {
+    "PolygonMultisig": {
+      "ignoreInWatchMode": ["nonce"]
+    },
     "InstaAaveV2": {
       "ignoreDiscovery": true
     },
