--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -709,6 +709,10 @@
       "address": "0x75231F58b43240C9718Dd58B4967c5114342a86c"
     },
     {
+      "symbol": "OLE",
+      "address": "0x1b6e9c73bee68102d9dd4a2627f97bff4183ab0a"
+    },
+    {
       "symbol": "OMG",
       "address": "0xd26114cd6EE289AccF82350c8d8487fedB8A0C07"
     },
