--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -835,6 +835,10 @@
       "address": "0x50DE6856358Cc35f3A9a57eAAA34BD4cB707d2cd"
     },
     {
+      "symbol": "RBX",
+      "address": "0x3ba925fdeae6b46d0bb4d424d829982cb2f7309e"
+    },
+    {
       "symbol": "rDPX",
       "address": "0x0ff5A8451A839f5F0BB3562689D9A44089738D11"
     },
