--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,8 +8,8 @@
     "clean": "rm -rf dist",
     "build": "tsc",
     "db:generate": "prisma generate",
-    "format": "biome format .",
-    "format:fix": "biome format --write .",
+    "format": "prisma format && biome format .",
+    "format:fix": "prisma format && biome format --write .",
     "lint:fix": "biome check --formatter-enabled=false --apply .",
     "lint": "biome check --formatter-enabled=false .",
     "typecheck": "tsc --noEmit"
