--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -65,6 +65,7 @@
     "@storybook/react": "7.0.9",
     "@storybook/react-vite": "7.0.9",
     "@storybook/testing-library": "^0.2.2",
+    "@tailwindcss/container-queries": "^0.1.1",
     "autoprefixer": "^10.4.13",
     "chromatic": "^7.4.0",
     "del": "^6.1.1",
