fix after rebase

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -45,6 +45,7 @@
   "dydx": true,
   "eclipse": true,
   "edgeless": true,
+  "ethernity": true,
   "everclear": true,
   "form": true,
   "frame": true,
@@ -75,6 +76,7 @@
   "linea": true,
   "lisk": true,
   "loopring": true,
+  "lumia": true,
   "lyra": true,
   "lzomnichain": false,
   "mantapacific": true,
